<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/card_background">
    <TextView
        android:id="@+id/total_to_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/total_to_pay"
        android:textColor="@color/woodsmoke_700"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/total_to_pay_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="₡95,599.50"
        android:textColor="@color/Matisse_700"
        android:textSize="25sp"
        android:fontFamily="@font/sf_pro_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_to_pay" />

    <LinearLayout
        android:id="@+id/container_card_credict_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/total_to_pay_value"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:id="@+id/container_gray_credit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_gray_container_credits"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:src="@drawable/ic_money_simulator" />

            <TextView
                android:id="@+id/total_to_pay_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/credit_detail"
                android:textColor="@color/Matisse_700"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/container_gray_credit">

            <TextView
                android:id="@+id/interest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/interest"
                android:textColor="@color/woodsmoke_800"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/btn_info_interest"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:layout_marginVertical="6dp"
                android:visibility="gone"
                android:layout_marginLeft="4dp"
                android:src="@drawable/ic_exclamation"
                app:tint="@color/woodsmoke_500" />


            <TextView
                android:id="@+id/interest_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="₡937.50"
                android:textColor="@color/woodsmoke_800"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/subtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:text="@string/subtotal"
                android:textColor="@color/woodsmoke_800"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/subtotal_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:text="₡75,937.50"
                android:textColor="@color/woodsmoke_800"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/technology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/technology"
                android:textColor="@color/woodsmoke_800"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/btn_info_tecnology"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginVertical="6dp"
                android:layout_marginLeft="4dp"
                android:src="@drawable/ic_exclamation"
                app:tint="@color/woodsmoke_500" />

            <TextView
                android:id="@+id/technology_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="₡17,400.00"
                android:textColor="@color/woodsmoke_800"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/IVAtechnology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"

                android:text="IVA"
                android:textColor="@color/woodsmoke_800"
                android:textSize="14sp" />
            <ImageView
                android:id="@+id/btn_info_IVA"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:layout_marginVertical="6dp"
                android:layout_marginLeft="4dp"
                android:src="@drawable/ic_exclamation"
                app:tint="@color/woodsmoke_500" />
            <TextView
                android:id="@+id/IVAtechnology_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="₡2,262.00"
                android:gravity="end"
                android:textColor="@color/woodsmoke_800"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:padding="16dp">

            <TextView
                android:id="@+id/bond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/bond"
                android:textColor="@color/woodsmoke_800"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/bond_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="$5,950.00"
                android:textColor="@color/woodsmoke_800"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_gray_credit_payments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_gray_container_credits"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:src="@drawable/ic_bars_simulator" />

            <TextView
                android:id="@+id/payments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/payments"
                android:textColor="@color/Matisse_700"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPayments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            tools:listitem="@layout/item_credit_payment_detail" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>